colors and wrong password alert

--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ html {height: 100% width: 100%}
   p {font-family: okfont}
   button {font-family: okfont}
 a {color:slateblue}
-h1 {color:dodgerblue}
+h1 {color:salmon}
 h2 {color:steelblue}
-body {background-color:black}
+body {background-color:gray}
 p {color:white}
 .centeraligned {text-align: center;}
